[package]
name = "amazon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6"
serde_json = "1.0"
polars = { version = "0.35.4", features = ["lazy", "parquet"] }

[[bin]]
name = "preprocessing"
